Fix ASCII art breaking on mobile
---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/LenonCalsavara/my-website/tree/main?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div id="interlaced"></div>
 <div id="glare"></div>
-<pre id="asciiText" style="display:none;">
+<pre id="asciiText">
 
 $$\
 $$ |
